# ampls-api

./: .gitignore  .readthedocs.yaml  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml  changes.md  changes.rst
cpp/ampls/: CMakeLists.txt
cpp/ampls/examples/: addConstraints.cpp  addEntities.cpp  benders.cpp  callbacks.cpp  cuttingStock.cpp  errorDetection.cpp  getInformation.cpp  loadModel.cpp  multipleModels.cpp  multipleSolutions.cpp  setOptions.cpp  simpleCuts.cpp  stoppingCriteria.cpp  tsp.cpp
cpp/ampls/include/ampls/: ampls.h
cpp/ampls/src/: ampls.cpp  csvReader.cpp
cpp/ampls/swig/: ampls-common.i
cpp/ampls/test/: addEntities-test.cpp  api-test.cpp  cuttingStock-test.cpp  errorDetection-test.cpp  getInformation-test.cpp  loadModel-test.cpp  multipleModels-test.cpp  multipleSolutions-test.cpp  setOptions-test.cpp  test-base.h  test-execute.h  tsp-test.cpp
cpp/generic/: CMakeLists.txt
cpp/generic/examples/: getInformation.cpp  loadModel.cpp  simpleCuts.cpp
cpp/generic/include/simpleapi/: simpleApi.h
cpp/generic/src/: csvReader.cpp  csvReader.h  simpleApi.cpp
cpp/generic/swig/: generic-common.i
cpp/generic/test/: api-test.cpp
csharp/ampls/: AssemblyInfo.cs.in  CMakeLists.txt
csharp/ampls/amplssharp-test/: Program.cs  amplssharp-test.csproj
csharp/ampls/api/: Utils.cs  amplssharp.csproj.in
csharp/ampls/api/Properties/: AssemblyInfo.cs
csharp/ampls/swig/: amplssharp_c.i
csharp/cbcmp/: CMakeLists.txt
csharp/cbcmp/cbcmpsharp-test/: Program.cs
csharp/cbcmp/examples/: cbcmpsharp-examples.csproj
csharp/cbcmp/swig/: cbcmpsharp_c.i
csharp/cplex/: AssemblyInfo.cs.in  CMakeLists.txt  ConfigureCSharpLib.cmake.in  cpxsharp_c.i
csharp/cplex/api/: Utils.cs  cplexsharp.csproj.in  cpxsharp.csproj.in  dev_cpxsharp.csproj
csharp/cplex/api/Properties/: .gitignore  AssemblyInfo.cs
csharp/cplex/cplexsharp-test/: Program.cs  cplexsharp-test.csproj
csharp/cplex/cpxsharp-test/: Program.cs  cpxsharp-test.csproj
csharp/cplex/examples/: LoadModelGeneric.cs  cplexsharp-examples.csproj
csharp/cplex/swig/: cplexsharp_c.i  cpxsharp_c.i
csharp/gurobi/: AssemblyInfo.cs.in  CMakeLists.txt  ConfigureCSharpLib.cmake.in
csharp/gurobi/api/: Utils.cs  dev_gsharp.csproj  gurobisharp.csproj.in
csharp/gurobi/api/Properties/: AssemblyInfo.cs
csharp/gurobi/examples/: LoadModelGeneric.cs  Program.cs  gsharp-examples.csproj  gurobisharp-examples.csproj
csharp/gurobi/gurobisharp-test/: Program.cs  gurobisharp-test.csproj
csharp/gurobi/swig/: gsharp_c.i  gurobisharp_c.i  x-gurobisharp_c.i
csharp/gurobi/test/: gsharp-test.csproj
csharp/simpleapi/: CMakeLists.txt
csharp/simpleapi/api/: dev_simpleapisharp.csproj  simpeapisharp.csproj.in  simpleapisharp.csproj.in
csharp/simpleapi/simpleapisharp-test/: Program.cs  simpleapisharp-test.csproj
csharp/simpleapi/swig/: cpxsharp_c.i  simpleapisharp_c.i
doc/: CMakeLists.txt  update_examples_list.py
doc/common/: definitions.rst
doc/cpp/: CMakeLists.txt  Doxyfile.in
doc/cpp/source/: architecture.rst  conf.py  examples.rst  index.rst  introduction.rst  quickstart.rst  reference.rst
doc/images/: Callbacks.dot  classdiagram.dot  definitions.rst
doc/rst/: CMakeLists.txt  Doxyfile  Doxyfile.in  conf.py  index.rst  requirements.txt
doc/rst/cpp/: architecture.rst  changes.rst  examples.rst  index.rst  quickstart.rst  reference.rst
doc/rst/doxygen/xml/: ampls_8h.xml  classampls_1_1_a_m_p_l_model.xml  classampls_1_1_a_m_p_l_solver_exception.xml  classampls_1_1_c_p_l_e_x_callback.xml  classampls_1_1_c_p_l_e_x_drv.xml  classampls_1_1_c_p_l_e_x_model.xml  classampls_1_1_generic_callback.xml  classampls_1_1_gurobi_callback.xml  classampls_1_1_gurobi_drv.xml  classampls_1_1_gurobi_model.xml  classampls_1_1_x_p_r_e_s_s_callback.xml  classampls_1_1_x_p_r_e_s_s_drv.xml  classampls_1_1_x_p_r_e_s_s_model.xml  classampls_1_1impl_1_1_base_callback.xml  cplex__callback_8h.xml  cplex__interface_8h.xml  dir_021c4d6555c59d21f4bb184920aa16d8.xml  dir_0eb0eb466e3e3e1a8c53491842290a51.xml  dir_13f05dab79ed591d39060cbbca09721a.xml  dir_14a18a777f0b02a1b6fd06c492803693.xml  dir_3158c873e3f29edac3968a0e7e41d6b3.xml  dir_36d6ae9765bee0b81c5482b3c506a1c9.xml  dir_3a71cff1a52028f5908015a4810e20c0.xml  dir_4d8f61671ae4aab13af5e0675973927c.xml  dir_4ecc16fc84cfde6c0b3a8c2451e1b045.xml  dir_687f8b5507520f0cf38799dc44ae8fb4.xml  dir_68f3ef940aa10bd6eccdd96b840ea31c.xml  dir_6ca9c46e63c4dc3a2bb111657d2d2b56.xml  dir_6dda35f232ca126f3d10014ab4a87659.xml  dir_7b27852cdbfda45e2602b0f9a2c15da8.xml  index.xml  (+21 more)
doc/rst/general/: genintroduction.rst  introduction.rst  structure.rst  usage.rst
doc/rst/images/: AMPLModel.dot  Callbacks.dot  GenericStructure.dot  PythonStructure.dot  gurobiStructure.dot
doc/rst/python/: architecture.rst  examples.rst  index.rst  quickstart.rst  reference.rst
python/ampls/: .gitignore  CMakeLists.txt  prepare.sh  register.sh  setup.py  swig.sh
python/ampls/amplpy_ampls/: .gitignore  __init__.py  patch.py
python/ampls/examples/: amplpy_ampls_examples.pyproj  loadModel.py  model.nl  modelint.nl  nlfile.nl  progressCallback.py  requirements.txt  tspCallback.py
python/ampls/notebooks/: pattern_generation2_simpleapi.ipynb  stopdata.py
python/cplex/: CMakeLists.txt  amplpy_cplex.py  cpxpy_c.i  prepare.sh  setup.py  swig.sh
python/cplex/amplpy_cplex/: .gitignore  __init__.py  patch.py
python/cplex/cpxpy-test/: CallbackExample.py  PatternGeneration.py  cpxpy-test.pyproj  cpxpy_test.py  tsp_test.py
python/cplex/examples/: amplpy_cplex_examples.pyproj  nlfile.sol  progress_callback.py  tsp_callback.py
python/gurobi/: CMakeLists.txt  LICENSE  prepare.sh  setup.py  swig.sh
python/gurobi/amplpy_gurobi/: .gitignore  __init__.py  patch.py
python/gurobi/examples/: amplpy_gurobi_examples.pyproj  gurobi_progress_callback.py  progress_callback.py
python/gurobi/notebooks/: nlfile.nl  nlfile.sol
python/simpleapi/: CMakeLists.txt  setup.py
python/simpleapi/examples/: amplpy_simpleapi_examples.pyproj  loadModel.py  progressCallback.py  progress_callback.py  simple_callback.py  tspCallback.py
(+419 files in other folders)
